--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,18 @@ gorutine
 hello
 multi_return
 .vscode/
-
-
+src/github.com/alecthomas
+src/github.com/BurntSushi
+src/github.com/fatih
+src/github.com/mdempsky
+src/github.com/mgechev
+src/github.com/sqs
+src/golang.org
+src/github.com/mitchellh
+src/github.com/olekukonko
+src/github.com/ramya-rao-a
+src/github.com/rogpeppe
+src/github.com/golangci
+src/github.com/mattn
+src/github.com/tpng
+src/github.com/zmb3
