os.Args命令⾏行行参数的切⽚片

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ src/github.com/golangci
 src/github.com/mattn
 src/github.com/tpng
 src/github.com/zmb3
+src/github.com/urfave
+src/github.com/cpuguy83
