--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-    "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 100,
-    "editor.fontSize": 16
+    "git.ignoreLimitWarning": true
 }
