--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "maven.view": "hierarchical"
+    "maven.view": "hierarchical",
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 14,
+    "editor.fontSize": 18,
+    
 }
