--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
-    "maven.view": "hierarchical",
     "files.autoSave": "afterDelay",
-    "editor.fontSize": 18,
-    
+    "editor.fontSize": 18
 }
