运算符赋值
Signed-off-by: tddey <liujicun01@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,14 @@ src/github.com/tpng
 src/github.com/zmb3
 src/github.com/urfave
 src/github.com/cpuguy83
+src/github.com/davidrjenni
+src/github.com/acroca
+src/github.com/cweill
+src/github.com/haya14busa
+src/github.com/josharian
+src/github.com/karrick
+src/github.com/sqs
+src/sourcegraph.com
+src/golang.org
+src/github.com/skratchdot
+src/github.com/uudashr
